# AiX_ATS_System

./: LICENSE  README.md  create_template.py  interface.py  main.py  pyproject.toml  requirements.txt
