[project]
name = "ats-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==3.0.0",
    "azure-cognitiveservices-speech==1.45.0",
    "azure-core==1.35.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "comm==0.2.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "executing==2.2.0",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.31",
    "lxml==6.0.0",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "openpyxl>=3.1.5",
    "packaging==25.0",
    "pandas>=2.3.2",
    "parso==0.8.4",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pydantic>=2.11.7",
    "pygments==2.19.2",
    "pypdf2>=3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv>=1.1.1",
    "pywin32==310",
    "pyzmq==27.0.0",
    "requests==2.32.5",
    "six==1.17.0",
    "stack-data==0.6.3",
    "streamlit>=1.48.1",
    "tornado==6.5.1",
    "traitlets==5.14.3",
    "typing>=3.10.0.0",
    "typing-extensions==4.14.0",
    "urllib3==2.5.0",
    "uv==0.7.13",
    "wcwidth==0.2.13",
]
